# ParticleAPI

./: .gitignore  CMakeLists.txt  ParticleAPI.sln  README.md
.github/workflows/: Build.yml
src/: DLLMain.cpp  ParticleAPI.cpp  ParticleAPI.h  ParticleAPI.vcxproj  Plugin.cpp  Version.h
